feat: Some fixes post discussions with Audit & others (#225)
* feat: Some fixes post discussions with Audit & others

(PRO-342, PRO-341, PRO-340, PRO-339)

- Price source should not optional anywhere
- Double fee counting with ATA calculation and then fee payer outflow calculation, removed ATA separated calc completely
- Checked math operations everywhere to prevent overflow errors
- .unwrap() removed with better graceful error handling
-remove signature from response in signAndSendTransaction and signTransaction

* Pr fixes

* CI fixes

* Fix testing with rpc not optional

* Updated ts types and docs
